gcc/testsuite/rust/rustc/ui/error-codes/E0459.rs
#[link(kind = "dylib")] extern "C" {} // { dg-error ".E0459." "" { target *-*-* } }

fn main() {
}

